--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "totoapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://pure-adachi.github.io/myapp",
+  "homepage": "http://nbr41to.github.io/totoapp_58ki",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
